--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,11 +4,11 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/cat_baby_body"
+        android:icon="@drawable/stoffart_wolle"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/cat_baby_body"
+        android:roundIcon="@drawable/stoffart_wolle"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.Light">
         <provider
             android:name=".db.stoffe.StoffProvider"
             android:authorities="com.github.animusanima.a4sewer"
